--- a/02_ContactList-WpfApp/Views/AddContactView.xaml
+++ b/02_ContactList-WpfApp/Views/AddContactView.xaml
@@ -4,9 +4,33 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:_02_ContactList_WpfApp.Views"
+             xmlns:viewmodels="clr-namespace:_02_ContactList_WpfApp.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:AddContactViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <TextBlock>AddContactView</TextBlock>
+    <!--<Grid>
+
+        <TextBlock Grid.Row="0" Text="{Binding PageTigle}" ></TextBlock>
+        <StackPanel Grid.Row="3" >
+            <TextBlock>Enter a firstname</TextBlock>
+            <TextBox Text="{Binding Contact}" ></TextBox>
+            <Button Command="{Binding AddCommand}" Padding="3"></Button>
+        </StackPanel>
+    </Grid>-->
+
+    <Grid Margin="40">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto" />
+            <RowDefinition />
+        </Grid.RowDefinitions>
+
+        <TextBlock Grid.Row="0" Text="{Binding PageTitle}" FontSize="22" FontWeight="Medium" Margin="0 0 0 50" />
+
+        <StackPanel Grid.Row="2">
+            <TextBlock Text="Add a Contact" />
+            <TextBox Text="{Binding Contact}" Padding="5" Margin="0 5 0 25" />
+            <Button Command="{Binding AddCommand}" Content="ADD Contact" Padding="8" />
+            
+            
+        </StackPanel>
     </Grid>
 </UserControl>
