--- a/02_ContactList-WpfApp/Views/ContactView.xaml
+++ b/02_ContactList-WpfApp/Views/ContactView.xaml
@@ -4,9 +4,34 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:_02_ContactList_WpfApp.Views"
+             xmlns:viewmodels="clr-namespace:_02_ContactList_WpfApp.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:ContactsViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
-    <Grid>
-        <TextBlock>Contact view syns detta </TextBlock>    
+    <!--<Grid>
+
+        <TextBlock Text="{Binding PageTigle}" ></TextBlock>
+        <ListView Grid.Row="3" ItemsSource="{Binding Contact}" >
+            <TextBlock>Display contact</TextBlock>
+            <TextBlock Text="{Binding FirstName}" Width="77" ></TextBlock>
+            
+        </ListView>
+    </Grid>-->
+    <Grid Margin="40">
+        <Grid.RowDefinitions>
+        <RowDefinition Height="auto" />
+        <RowDefinition />
+    </Grid.RowDefinitions>
+
+    <TextBlock Grid.Row="0" Text="{Binding PageTigle}" FontSize="22" FontWeight="Medium" Margin="0 0 0 50" />
+
+    <ListView Grid.Row="1" ItemsSource="{Binding Contacts}" >
+        <ListView.ItemTemplate>
+            <DataTemplate>
+                    <TextBlock Text="{Binding FirstName}" />
+            </DataTemplate>
+        </ListView.ItemTemplate>
+    </ListView>
+
     </Grid>
+
 </UserControl>
