--- a/02_ContactList-WpfApp/MainWindow.xaml
+++ b/02_ContactList-WpfApp/MainWindow.xaml
@@ -8,20 +8,21 @@
         xmlns:views="clr-namespace:_02_ContactList_WpfApp.Views"
         d:DataContext="{d:DesignInstance Type=viewmodels:MainViewModel}"
         mc:Ignorable="d"
-        Title="MainWindow" Height="1000" Width="1300">
-    <Grid>
+        Title="MainWindow" Height="700" Width="1600">
+    <Grid RenderTransformOrigin="0.388,0.557">
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*" />
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <StackPanel Grid.Column="0">
-            <Button Command="{Binding GoToAddContactsCommand}" Content="Display Contacts" Padding="5" Margin="5"/>
+        <StackPanel Grid.Column="0" HorizontalAlignment="Left" Width="155">
+            <Button Command="{Binding GoToAddContactsCommand}" Content="All Contacts" Padding="5" Margin="5"/>
             <Button Command="{Binding GoToAddContactCommand}" Content="Add Contacts" Padding="5" Margin="5"/>
+            <Button Command="{Binding GoToDisplayContactsCommand}" Content="Manage Contacts" Padding="5" Margin="5"/>
          
         </StackPanel>
 
-        <Grid Grid.Column="1">
+        <Grid Grid.Column="1" Margin="10,0,0,0">
             <ListView Margin="30 30 30 30">
                
                 <ContentControl Content="{Binding CurrentViewModel}">
@@ -32,6 +33,10 @@
                         <DataTemplate DataType="{x:Type viewmodels:AddContactViewModel}">
                             <views:AddContactView></views:AddContactView>
                         </DataTemplate>
+                        <DataTemplate DataType="{x:Type viewmodels:DisplayContactViewModel}">
+                            <views:DisplayContactView></views:DisplayContactView>
+                        </DataTemplate>
+
                     </ContentControl.Resources>
                 </ContentControl>
                 
