--- a/02_ContactList-WpfApp/Views/DisplayContactView.xaml
+++ b/02_ContactList-WpfApp/Views/DisplayContactView.xaml
@@ -1,25 +1,14 @@
-﻿<UserControl x:Class="_02_ContactList_WpfApp.Views.AddContactView"
+﻿<UserControl x:Class="_02_ContactList_WpfApp.Views.DisplayContactView"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
-             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:_02_ContactList_WpfApp.Views"
-             
-             xmlns:viewmodels="clr-namespace:_02_ContactList_WpfApp.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:AddContactViewModel}"
+             xmlns:d="http://schemas.microsoft.com/expression/blend/2008" xmlns:viewmodels="clr-namespace:_02_ContactList_WpfApp.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:DisplayContactViewModel}"
              mc:Ignorable="d" 
-             d:DesignHeight="350" d:DesignWidth="525">
+             d:DesignHeight="450" d:DesignWidth="800">
+    <Grid >
+          <TextBlock Grid.Row="0" Text="{Binding PageTigle}" FontSize="22" FontWeight="Medium" Margin="0 0 0 50"  />
 
-
-
-    <Grid Margin="40">
-        <Grid.RowDefinitions>
-            <RowDefinition Height="auto" />
-            <RowDefinition />
-        </Grid.RowDefinitions>
-
-        <TextBlock Grid.Row="0" Text="{Binding PageTigle}" FontSize="22" FontWeight="Medium" Margin="0 0 0 50" />
-
-        <StackPanel Grid.Row="2"   >
+        <StackPanel Grid.Row="1"   >
             <TextBlock Text="Add a Firstname" />
             <TextBox Text="{Binding Contact}" Padding="2" Margin="0 1 0 10"  />
             <TextBlock Text="Add a Lastname" />
@@ -34,8 +23,9 @@
             <TextBox Text="{Binding Postalcode}" Width="200" Padding="2" Margin="0 1 0 10" />
             <TextBlock Text="Add a city" />
             <TextBox Text="{Binding City}" Width="200" Padding="2" Margin="0 1 0 10" />
-            <Button Command="{Binding AddCommand}" Content="ADD Contact" Padding="8" />
+            
         </StackPanel>
    
+ 
     </Grid>
 </UserControl>
