--- a/03_CobtactAppWpf/MVVM/Views/AddContactView.xaml
+++ b/03_CobtactAppWpf/MVVM/Views/AddContactView.xaml
@@ -3,10 +3,12 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:_03_CobtactAppWpf.MVVM.Views"
+             xmlns:local="clr-namespace:_03_CobtactAppWpf.MVVM.Views" 
+             xmlns:viewmodels="clr-namespace:_03_CobtactAppWpf.MVVM.ViewModels" d:DataContext="{d:DesignInstance Type=viewmodels:AddContactViewModel}"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <TextBlock Text="{Binding Title}" FontSize="22"/>
+        
     </Grid>
 </UserControl>
