--- a/03_CobtactAppWpf/MVVM/Views/AddContactView.xaml
+++ b/03_CobtactAppWpf/MVVM/Views/AddContactView.xaml
@@ -9,6 +9,24 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
         <TextBlock Text="{Binding Title}" FontSize="22"/>
-        
+
+        <StackPanel Grid.Row="2"   >
+            <TextBlock Text="Add a Firstname" />
+            <TextBox Text="{Binding Contact}" Padding="2" Margin="0 1 0 10"  />
+            <TextBlock Text="Add a Lastname" />
+            <TextBox Text="{Binding Lastname}" Width="200" Padding="2" Margin="0 1 0 10" />
+            <TextBlock Text="Add a Email" />
+            <TextBox Text="{Binding Email}" Width="200" Padding="2" Margin="0 1 0 10" />
+            <TextBlock Text="Add a Phonenumber" />
+            <TextBox Text="{Binding Phonenumber}" Width="200" Padding="2" Margin="0 1 0 10" />
+            <TextBlock Text="Add an adress" />
+            <TextBox Text="{Binding Adress}" Width="200" Padding="2" Margin="0 1 0 10" />
+            <TextBlock Text="Add a postalcode" />
+            <TextBox Text="{Binding Postalcode}" Width="200" Padding="2" Margin="0 1 0 10" />
+            <TextBlock Text="Add a city" />
+            <TextBox Text="{Binding City}" Width="200" Padding="2" Margin="0 1 0 10" />
+            <Button Command="{Binding AddCommand}" Content="ADD Contact" Padding="8" />
+        </StackPanel>
+
     </Grid>
 </UserControl>
