--- a/03_CobtactAppWpf/MVVM/Views/AddContactView.xaml
+++ b/03_CobtactAppWpf/MVVM/Views/AddContactView.xaml
@@ -10,7 +10,7 @@
     <!--<TextBlock Text="{Binding Title}" FontSize="22"/>-->
     <Grid >
 
-        <Grid  Height="350" Width="525" Background="Bisque">
+        <Grid  Height="350" Width="525" Background="blue">
             <TextBlock Height="23" HorizontalAlignment="Left" Margin="10,5,0,0" Name="textBlockHeading" Text="{Binding Title}" VerticalAlignment="Top" Width="110"  FontSize="17" FontStretch="ExtraCondensed"/>
             <!--Button as a Link button using style-->
             <Button Margin="451,5,12,288" >
@@ -21,16 +21,7 @@
                         </TextBlock>
                     </ControlTemplate>
                 </Button.Template>
-                <Button.Style>
-                    <Style TargetType="Button">
-                        <Setter Property="Foreground" Value="Navy" />
-                        <Style.Triggers>
-                            <Trigger Property="IsMouseOver" Value="true">
-                                <Setter Property="Foreground" Value="Red" />
-                            </Trigger>
-                        </Style.Triggers>
-                    </Style>
-                </Button.Style>
+          
             </Button>
             <!--end Button as a Link button using style-->
             <Grid Margin="31,0,29,23" Background="White" Height="264" VerticalAlignment="Bottom">
