--- a/03_CobtactAppWpf/MVVM/Views/ContactsView.xaml
+++ b/03_CobtactAppWpf/MVVM/Views/ContactsView.xaml
@@ -14,7 +14,7 @@
             <RowDefinition Height="auto"/>
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
-        <TextBlock Grid.Row="0" Text="{Binding Title}" Margin="0 0 0 20 "/>
+        <TextBlock Grid.Row="0" Text="{Binding Title}" VerticalAlignment="Top" HorizontalAlignment="Left" Width="110"  FontSize="17" FontStretch="ExtraCondensed"/>
         
         <Grid Grid.Row="1">
             <Grid.ColumnDefinitions>
